--- a/index.css
+++ b/index.css
@@ -1,18 +1,24 @@
 body{
     display: grid;
-    grid-template-rows: 100px 300px 100px 300px;
-    grid-template-columns: 50px 1fr 50px;
+    grid-template-rows: 120px 250px 120px 200px;
+    grid-template-columns: 50px 1fr 2fr 1fr 50px ;
     background-color: #003049;
     grid-template-areas: 
-        ". header ."
-        ". loader ."
-        "carte carte carte"
-        ". carte-acess .";
+        "header header header header header"
+        "loader loader loader loader loader"
+        "carte carte carte carte carte"
+        "carte-acess carte-acess carte-acess carte-acess carte-acess";
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 
 .header{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-flow: row nowrap; 
     margin: 0 auto;
 }
 
@@ -20,27 +26,57 @@ body{
     width: 100%;
     height: 100%;
     background-color: #fff;
+    border-top: 6px solid #d62828;
+    border-bottom: 6px solid #d62828;
 }
 
 .carte{
+    grid-area: carte;
     display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-evenly;
+    flex-flow: column nowrap;
+    justify-content: center;
     align-items: center;
 }
 
+.bot-carte{
+    width: 100%;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-around;
+    align-items: center;
+    align-self: flex-end;
+    background: #eae2b7;
+}
+
 .carte-sign{
+    width: 120px;
+    height: 70px;
     display: flex;
     flex-flow: row nowrap;
     justify-content: center;
     align-items: center;
-    background: #f77f00;
+    background: #eae2b7;
+    color: #f7a204;
+    font-size: 35px;
 }
 
-.carte-sign{
-    width: 60px;
-    height: 60px;
-    background-color: #f77f00;
+.carte-sign:nth-child(2){
+    border-left: 4px solid #f77f00;
+    border-right: 4px solid #f77f00;
+}
+
+.main-carte-sign{
+    transform: translate(0, 6px);
+    text-align: center;
+    width: 270px;
+    padding: 5px 10px; 
+    margin-top: 10px;
+    color: #f7a204;
+    border: 4px solid #f7a204;
+    background: #eae2b7;  
+    grid-area: mainCarte;
+    font-size: 20px;
+    border-radius: 10px; 
 }
 
 .header{
@@ -51,10 +87,18 @@ body{
     grid-area: loader;
 }
 
-.carte{
-    grid-area: carte;
-}
-
 .carte-acess{
     grid-area: carte-acess;
+    background: url(/img/back-pedido.jpg);
+}
+
+.logo{
+    width: 130px;
+    height: 130px;
+}
+
+.slogan{
+    width: 120px;
+    text-align: center;
+    color: #fff;
 }
