--- a/index.css
+++ b/index.css
@@ -1,16 +1,23 @@
 body{
     display: grid;
-    grid-template-rows: 120px 250px 120px 300px;
+    grid-template-rows: 120px 250px 120px 250px 0px 150px;
     grid-template-columns: 1fr 1fr 1fr;
     background-color: #003049;
     grid-template-areas: 
         "header header header"
         "loader loader loader"
         "carte carte carte"
-        "carte-acess carte-acess carte-acess";
+        "carte-acess carte-acess carte-acess"
+        "pedido pedido pedido"
+        "footer footer footer"
+       ;
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+}
+
+a{
+    text-decoration: none;   
 }
 
 .header{
@@ -47,8 +54,6 @@ body{
     align-self: flex-end;
     background: #eae2b7;
 }
-
-
 
 .carte-sign{
     width: 120px;
@@ -88,6 +93,8 @@ body{
 .carte-acess{
     grid-area: carte-acess;
     background: url(/img/back-pedido.jpg);
+    filter: blur(2.5px);
+    z-index: -1;
 }
 
 .logo{
@@ -99,4 +106,17 @@ body{
     width: 120px;
     text-align: center;
     color: #fff;
+}
+
+.pedido{
+    width: 250px;
+    height: 250px;
+    position: absolute;
+    z-index: 2;
+    transform: translate(80px, -245px);
+    grid-area: pedido;
+}
+
+.footer{
+    grid-area: footer;
 }
