--- a/assets/stylesheet/cadastro.css
+++ b/assets/stylesheet/cadastro.css
@@ -1,24 +1,50 @@
 @import url('https://fonts.googleapis.com/css?family=Oswald&display=swap');
 
-.fundo {
-    background: border-box rgb(255, 0, 0) url(/cliente/ativos/imagens/fundo_cad2.jpg) no-repeat 10% 30% scroll;
-    background-size: cover;
+body {
+    background-color: #003049;
     width: 100vw;
     height: 100vh;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+  }
+
+
+.formum {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-flow: column nowrap;
+    height: auto;
+    width: auto;
 }
 
-.formulario{
-    
+.logo{
+    width: 100px;
+    height: 100px;
 }
 
 .campo {
     width: 250px;
     height: 40px;
     border: none;
-    border-bottom: 5px solid rgb(231, 81, 26);
+    border-bottom: 5px solid #f32222;
     background-color: transparent;
     color: #fff;
     font-size: 20px;
     font-weight: bolder;
     margin-bottom: 15px;
-}
+  }
+
+  .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column nowrap;
+    background-color: rgba(48, 43, 43, 0.6);
+    padding: 10px;
+    border-radius: 10px;
+    margin: 10px;
+    padding: 20px 50px;
+  }
