--- a/assets/stylesheet/cadastro.css
+++ b/assets/stylesheet/cadastro.css
@@ -26,7 +26,7 @@ body {
 }
 
 .campo {
-    width: 250px;
+    width: auto;
     height: 40px;
     border: none;
     border-bottom: 5px solid #f32222;
@@ -37,14 +37,25 @@ body {
     margin-bottom: 15px;
   }
 
+.campo::placeholder {
+    text-indent: 15px;
+    font-size: 18px;
+    font-weight: bolder;
+    color: #fff;
+  }
+
   .container {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-flow: column nowrap;
-    background-color: rgba(48, 43, 43, 0.6);
+    background-color: #302b2b99;
     padding: 10px;
     border-radius: 10px;
-    margin: 10px;
-    padding: 20px 50px;
+    padding: 20px 40px;
+  }
+
+  .select-menu{
+      padding: 10px;
+      outline: none;
   }
