--- a/assets/stylesheet/login.css
+++ b/assets/stylesheet/login.css
@@ -38,12 +38,12 @@ body {
   color: #fff;
   font-size: 20px;
   font-weight: bolder;
-  margin: 10px 20px 10px 20px;
+  margin: 10px 20px 10px 5px;
 }
 
 .campo::placeholder {
   text-indent: 15px;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: bolder;
   color: #fff;
 }
@@ -64,7 +64,7 @@ body {
   justify-content: center;
   align-items: center;
   flex-flow: row nowrap;
-  background-color: rgba(48, 43, 43, 0.6);
+  background-color: #302b2b99;
   padding: 10px;
   border-radius: 10px;
   margin: 10px
