--- a/assets/stylesheet/index.css
+++ b/assets/stylesheet/index.css
@@ -1,8 +1,17 @@
 @import url('https://fonts.googleapis.com/css?family=Oswald&display=swap');
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    border: none;
+    outline: none;
+    font-family: 'Oswald', sans-serif;
+  }
+
 body{
     display: grid;
-    grid-template-rows: 120px 250px 120px 250px 0px 150px;
+    grid-template-rows: 120px 250px 120px 250px 0 150px;
     grid-template-columns: 1fr 1fr 1fr;
     background-color: #003049;
     grid-template-areas: 
@@ -13,9 +22,6 @@ body{
         "pedido pedido pedido"
         "footer footer footer"
        ;
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
 }
 
 a{
@@ -23,15 +29,14 @@ a{
 }
 
 .header{
+    grid-area: header;
     width: 100%;
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-flow: row nowrap; 
-    margin: 0 auto;
+    flex-flow: row nowrap;
 }
 
 .loader{
+    grid-area: loader;
     width: 100%;
     height: 100%;
     background-color: #fff;
@@ -84,15 +89,8 @@ a{
     border-radius: 10px; 
 }
 
-.header{
-    grid-area: header;
-}
-
-.loader{
-    grid-area: loader;
-}
-
 .carte-acess{
+    position: relative;
     grid-area: carte-acess;
     background: url(/assets/img/back-pedido.jpg);
     filter: blur(2.5px);
@@ -104,18 +102,13 @@ a{
     height: 130px;
 }
 
-.slogan{
-    width: 120px;
-    text-align: center;
-    color: #fff;
-}
-
 .pedido{
-    width: 250px;
-    height: 250px;
+    width: 100px;
+    height: 100px;
     position: absolute;
     z-index: 2;
-    transform: translate(80px, -245px);
+    top: 10px;
+    right: 10px;
     grid-area: pedido;
 }
 
