colocando a opção para o login

--- a/assets/stylesheet/cadastro.css
+++ b/assets/stylesheet/cadastro.css
@@ -80,3 +80,18 @@ body {
     color: #fff;
     cursor: pointer;
   }
+
+  .register{
+    align-self: center;
+    margin-top: 25px; 
+    color: #fff;
+    font-size: 20px;
+    font-weight: bolder;
+    margin-top: 20px;
+  }
+  
+  .register a{
+    color: #fff;
+    font-weight: bolder;
+    cursor: pointer;
+  }
