--- a/assets/stylesheet/login.css
+++ b/assets/stylesheet/login.css
@@ -57,6 +57,7 @@ body {
   background-color: #747474;
   color: #fff;
   cursor: pointer;
+  margin: 30px 0 0 50px ;
 }
 
 .container {
@@ -67,7 +68,7 @@ body {
   background-color: #302b2b99;
   padding: 10px;
   border-radius: 10px;
-  margin: 10px
+  margin: 10px; 
 }
 
 .register{
