--- a/assets/stylesheet/index.css
+++ b/assets/stylesheet/index.css
@@ -11,16 +11,14 @@
 
 body{
     display: grid;
-    grid-template-rows: 120px 250px 120px 250px 0 150px;
+    grid-template-rows: 115px 150px 129px 250px ;
     grid-template-columns: 1fr 1fr 1fr;
     background-color: #003049;
     grid-template-areas: 
         "header header header"
-        "loader loader loader"
+        "congrats congrats congrats"
         "carte carte carte"
-        "carte-acess carte-acess carte-acess"
-        "pedido pedido pedido"
-        "footer footer footer"
+        "loader loader loader"
        ;
 }
 
@@ -37,11 +35,21 @@ a{
 
 .loader{
     grid-area: loader;
-    width: 100%;
-    height: 100%;
-    background-color: #fff;
+    background: url(/assets/img/loader1.jpg);
+    background-size: 100% 100%;
+    background-position: 50% 50%;
     border-top: 6px solid #d62828;
     border-bottom: 6px solid #d62828;
+}
+
+.congrats{
+    grid-area: congrats;
+    background-color: #f7a204;
+    padding: 0 20px;
+}
+
+.congrats h1{
+    color: #fcfcfc;
 }
 
 .carte{
@@ -90,9 +98,17 @@ a{
 }
 
 .carte-acess{
-    position: relative;
     grid-area: carte-acess;
-    background: url(/assets/img/back-pedido.jpg);
+    background: url(/assets/img/loader2.jpg);
+    background-size: 100% 100%;
+    background-position: 50% 50%;
+}
+
+.emphasis{
+    font-size: 40px;
+    color: #d62828;
+    font-weight: bolder;
+    text-shadow: 1px -1px 2px black;
 }
 
 .logo{
@@ -104,9 +120,6 @@ a{
     width: 100px;
     height: 100px;
     position: absolute;
-    grid-area: pedido;
-}
-
-.footer{
-    grid-area: footer;
+    top: 10px; 
+    right: 10px;
 }
