--- a/assets/stylesheet/menu.css
+++ b/assets/stylesheet/menu.css
@@ -13,7 +13,7 @@ body {
     display: grid;
     background-color: #f7a204;
     grid-template-rows: 10% 1fr;
-    grid-template-areas: 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
     grid-template-areas:
         "presentation presentation presentation"
         "carte carte carte"
@@ -24,12 +24,6 @@ body {
 
 a {
     text-decoration: none;
-}
-
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
 }
 
 .carte {
@@ -63,6 +57,10 @@ a {
     width: 100%;
     height: 100px;
     border-bottom: 8px solid #d62828;
+}
+
+.presentation h2{
+    font-size: 32px;
 }
 
 .logo {
